# AX5-SECT---AgenticX5-Supplier-Engagement-Control-Tower

./: .env.example  .gitignore  CLERK-SETUP.md  QUICKSTART.md  README.md  main.py  pyproject.toml  requirements.txt  run-api.bat  seed_database.py  setup.ps1
AX5-SECT-fix-pcf/frontend/app/pcf/: page.tsx
app/api/suppliers/: route.ts
database/: schema.sql
frontend/: .env.local.example  README.md  middleware.ts.disabled  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/campaigns/: route.ts
frontend/app/api/dashboard/stats/: route.ts
frontend/app/api/imds/: route.ts
frontend/app/api/pcf/: route.ts
frontend/app/api/portal/submissions/: route.ts
frontend/app/api/portal/tokens/: route.ts
frontend/app/api/suppliers/: route.ts
frontend/app/api/users/: route.ts
frontend/app/campaigns/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/imds/: page.tsx
frontend/app/login/: page.tsx
frontend/app/pcf/: page.tsx
frontend/app/portal/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/sign-in/[[...sign-in]]/: page.tsx
frontend/app/sign-up/[[...sign-up]]/: page.tsx
frontend/app/suppliers/: page.tsx
frontend/app/unauthorized/: page.tsx
frontend/app/users/: page.tsx
frontend/components/: ClientLayout.tsx  Header.tsx  RouteGuard.tsx  Sidebar.tsx
frontend/components/dashboard/: CampaignProgress.tsx  EmissionsChart.tsx  RecentActivity.tsx  StatsCard.tsx
frontend/components/layout/: Header.tsx  Sidebar.tsx
frontend/components/modals/: ConfirmDialog.tsx  IMDSModal.tsx  InviteSupplierModal.tsx  PCFModal.tsx  SupplierModal.tsx
frontend/components/portal/: PortalIMDSForm.tsx  PortalPCFForm.tsx
frontend/components/suppliers/: AddSupplierModal.tsx
frontend/contexts/: AuthContext.tsx  TranslationContext.tsx
frontend/lib/: api.ts  utils.ts
lib/: db.ts
migrations/: 001_create_users_roles.sql  002_supplier_portal.sql
src/: __init__.py  agents.py  api.py  api_campaigns.py  api_dashboard.py  api_suppliers.py  config.py  crud.py  database.py  db_models.py  graph.py  mock_responses.py  models.py  prompts.py  state.py
